# Copyright 2021 IRT Saint Exupéry, https://www.irt-saintexupery.com
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License version 3 as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program; if not, write to the Free Software Foundation,
# Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
# Contributors:
#    INITIAL AUTHORS - API and implementation and/or documentation
#        :author: Francois Gallard
#    OTHER AUTHORS   - MACROSCOPIC CHANGES
from __future__ import annotations

import logging
import pickle
from os import remove
from pathlib import Path

import pytest
from numpy import eye
from numpy import ones
from numpy import zeros
from numpy.random import default_rng
from scipy.linalg import norm
from scipy.sparse.linalg import LinearOperator
from scipy.sparse.linalg import spilu

from gemseo.linear.factory import LinearSolverLibraryFactory
from gemseo.linear.problem import LinearProblem
from gemseo.linear.scipy_linalg import BICGSTAB_Settings
from gemseo.linear.scipy_linalg.scipy_linalg import ScipyLinalgAlgos
from gemseo.linear.scipy_linalg.settings.lgmres import LGMRES_Settings
from gemseo.util.seeder import SEED
from gemseo.util.testing.helper import assert_exception

RESIDUALS_TOL = 1e-12


@pytest.fixture(scope="module")
def algo() -> ScipyLinalgAlgos:
    """A linear solver."""
    lib = ScipyLinalgAlgos("LGMRES")
    lib._problem = LinearProblem(zeros((2, 2)), ones(2))
    lib._problem.solution = 1
    return lib


def test_algo_list() -> None:
    """Tests the algo list detection at lib creation."""
    factory = LinearSolverLibraryFactory()
    assert len(factory.algorithms) >= 6
    for algo in ("LGMRES", "GMRES", "BICG", "QMR", "BICGSTAB", "LGMRES"):
        factory.is_available(algo)


def test_default() -> None:
    """Tests the DEFAULT solver."""
    factory = LinearSolverLibraryFactory()
    rng = default_rng(1)
    n = 5
    problem = LinearProblem(rng.random((n, n)), rng.random(n))
    factory.execute(problem, settings=LGMRES_Settings(max_iter=1000))
    assert problem.solution is not None
    assert problem.compute_residuals() < RESIDUALS_TOL


@pytest.mark.parametrize("n", [1, 4, 20])
@pytest.mark.parametrize("algo_name", ["LGMRES", "BICGSTAB"])
@pytest.mark.parametrize("use_preconditioner", [True, False])
@pytest.mark.parametrize("use_ilu_precond", [True, False])
@pytest.mark.parametrize("use_x0", [True, False])
def test_linsolve(algo_name, n, use_preconditioner, use_x0, use_ilu_precond) -> None:
    """Tests the solvers options."""
    factory = LinearSolverLibraryFactory()
    rng = default_rng(1)
    problem = LinearProblem(rng.random((n, n)), rng.random(n))
    options = {
        "max_iter": 100,
        "rtol": 1e-14,
        "atol": 1e-13,
        "x0": None,
        "use_ilu_precond": use_ilu_precond,
    }
    if use_preconditioner and not use_ilu_precond:
        options["preconditioner"] = LinearOperator(
            problem.lhs.shape, spilu(problem.lhs).solve
        )
        del options["use_ilu_precond"]
    if algo_name == "lgmres":
        v = rng.random(n)
        options.update({
            "inner_m": 10,
            "outer_k": 10,
            "outer_v": [(v, problem.lhs.dot(v))],
            "store_outer_av": True,
            "prepend_outer_v": True,
        })
    library_name = factory.algo_name_to_library[algo_name]
    settings = (
        factory
        .get_class(library_name)
        .ALGORITHM_INFOS[algo_name]
        .settings_class(**options)
    )
    factory.execute(problem, settings=settings)
    assert problem.solution is not None
    assert problem.compute_residuals() < RESIDUALS_TOL

    assert problem.solution is not None
    assert norm(problem.lhs.dot(problem.solution) - problem.rhs) < RESIDUALS_TOL


def test_common_dtype_cplx() -> None:
    factory = LinearSolverLibraryFactory()
    problem = LinearProblem(eye(2, dtype="complex128"), ones(2))
    factory.execute(problem, settings=LGMRES_Settings())
    assert problem.compute_residuals() < RESIDUALS_TOL

    problem = LinearProblem(eye(2), ones(2, dtype="complex128"))
    factory.execute(problem, settings=LGMRES_Settings())
    assert problem.compute_residuals() < RESIDUALS_TOL


def test_not_converged(caplog) -> None:
    """Tests the cases when convergence fails and save_when_fail option."""
    factory = LinearSolverLibraryFactory()
    rng = default_rng(SEED)
    n = 100
    problem = LinearProblem(rng.random((n, n)), rng.random(n))
    lib = factory.create("BICGSTAB")
    caplog.set_level(logging.WARNING)
    lib.execute(
        problem,
        settings=BICGSTAB_Settings(
            maxiter=2, save_when_fail=True, use_ilu_precond=False
        ),
    )
    assert not problem.is_converged
    assert "The linear solver BICGSTAB did not converge." in caplog.text

    with Path(lib.file_path).open("rb") as f:
        problem2 = pickle.load(f)
    remove(lib.file_path)
    assert (problem2.lhs == problem.lhs).all()
    assert (problem2.rhs == problem.rhs).all()

    lib.execute(
        problem,
        settings=BICGSTAB_Settings(
            max_iter=2, save_when_fail=True, use_ilu_precond=True
        ),
    )
    assert problem.is_converged


@pytest.mark.parametrize("seed", range(3))
def test_hard_conv(tmp_wd, seed) -> None:
    rng = default_rng(seed)
    n = 300
    problem = LinearProblem(rng.random((n, n)), rng.random(n))
    LinearSolverLibraryFactory().execute(
        problem,
        settings=LGMRES_Settings(
            max_iter=3, store_residuals=True, use_ilu_precond=True, rtol=1e-14
        ),
    )

    assert problem.compute_residuals() < 1e-10


def test_inconsistent_options(snapshot) -> None:
    problem = LinearProblem(ones((2, 2)), ones(2))

    with assert_exception(ValueError, snapshot):
        LinearSolverLibraryFactory().execute(
            problem, settings=LGMRES_Settings(preconditioner=ones((3, 3)))
        )

    with assert_exception(ValueError, snapshot):
        LinearSolverLibraryFactory().execute(
            problem, settings=LGMRES_Settings(x0=ones(3))
        )

    with assert_exception(ValueError, snapshot):
        LinearSolverLibraryFactory().execute(
            problem,
            settings=LGMRES_Settings(preconditioner=ones((2, 2)), use_ilu_precond=True),
        )


def test_check_info_warning(algo, caplog) -> None:
    """Check the warning message logged by check_info when info>0."""
    algo._check_solver_info(2, {})
    residual = algo._problem.compute_residuals(True)
    assert caplog.record_tuples[0] == (
        "gemseo.linear.scipy_linalg.scipy_linalg",
        30,
        f"SciPy linear solver algorithm stop info: residual = {residual}",
    )


def test_check_info_error(algo, snapshot):
    """Check the message of the error raised by check_info when info<0."""
    with assert_exception(RuntimeError, snapshot):
        algo._check_solver_info(-1, {"a": 2})


def test_factory() -> None:
    assert "ScipyLinalgAlgos" in LinearSolverLibraryFactory().linear_solvers
